--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <!-- page specific script -->
     <script type="text/javascript" src="./js/main_open.js"></script>
     <script type="text/javascript" src="./js/gdpr.js"></script>
+	<script type="text/javascript" src="./js/nttb_page.js"></script>
 	<script>page_gdpr();</script>
    
 </body>
