new settings for C and F

--- a/html/gdpr.html
+++ b/html/gdpr.html
@@ -46,13 +46,13 @@
             <strong>B)</strong> <span id="anonimous_avg"></span>
         </div>
         <div class="gdpr_hr">
-             <input id="anonimous_vink" style="display:none" type="checkbox" class="form-control" name="privacy2" id="privacy2">
+             <input style="display:none" type="checkbox" class="form-control" name="privacy2" id="privacy2">
         </div>
           
-        <div class="mt-2">
+        <div style="display:none" class="mt-2">
             <strong>C)</strong> Mij benaderen voor onderzoeken in het belang van leden van de NTTB.
         </div>
-        <div class="gdpr_hr">
+        <div style="display:none" class="gdpr_hr">
             <input type="checkbox" class="form-control" name="privacy3" id="privacy3">
         </div>
 
@@ -71,7 +71,7 @@
         </div>
    
         <div class="mt-2">
-            <strong>F)</strong> Het opnemen van mijn pasfoto of teamfoto op de website van de NTTB of organisaties waar de NTTB mee samenwerkt.
+            <strong>F)</strong> <span id="foto_avg"></span>
         </div>
         <div class="gdpr_hr">
             <input type="checkbox" class="form-control" name="privacy6" id="privacy6">
@@ -104,3 +104,4 @@
     </div>
     <!--privacy end-->
 </div>
+`;
