Complete gdpr module including demo of adding/removing

--- a/apps/app/public/index.html
+++ b/apps/app/public/index.html
@@ -54,6 +54,23 @@
         </div>
 
         <div class="profile-link text-center">
+          <button onclick="page_gdpr()" type="button" class="btn btn-radius">page_gdpr</button>
+        </div>
+
+        
+        <div class="profile-link text-center">
+          <button onclick="page_nttb()" type="button" class="btn btn-radius">page_nttb</button>
+        </div>
+
+        <div class="profile-link text-center">
+          <button onclick="page_dummy()" type="button" class="btn btn-radius">page_dummy</button>
+        </div>
+
+        <div class="profile-link text-center">
+          <button onclick="page_empty()" type="button" class="btn btn-radius">page_empty</button>
+        </div>
+
+        <div class="profile-link text-center">
           <button onclick="location.href='mailto:DWF@tafeltennis.nl';" type="button" id="e-vraag-btn"
             class="btn btn-secondary w-100 btn-radius"><i class="icon material-icons">email</i>&nbsp;&nbsp;stuur een
             vraag</button>
@@ -114,7 +131,8 @@
   <script type="text/javascript" src="./js/main_open.js"></script>
   <script type="text/javascript" src="./js/gdpr.js"></script>
   <script type="text/javascript" src="./js/nttb_page.js"></script>
-  <script>page_gdpr();</script>
+  <script type="text/javascript" src="./js/other_pages.js"></script>
+  <script>page_nttb();</script>
 
 </body>
 
